# gd32e23x-demo-suites-cmake-vscode

./: README.md
Drivers/BSP/GD32E230C_EVAL/: gd32e230c_eval.c  gd32e230c_eval.h  gd32e230c_lcd_eval.c  gd32e230c_lcd_eval.h
Drivers/BSP/GD32E230C_EVAL/LCD_Common/: lcd_font.h  lcd_log.c  lcd_log.h
Drivers/BSP/GD32E230C_START/: gd32e230c_start.c  gd32e230c_start.h
Drivers/BSP/GD32E230F_START/: gd32e230f_start.c  gd32e230f_start.h
Drivers/BSP/GD32E230G_START/: gd32e230g_start.c  gd32e230g_start.h
Drivers/BSP/GD32E230K_START/: gd32e230k_start.c  gd32e230k_start.h
Drivers/BSP/GD32E230V_START/: gd32e230v_start.c  gd32e230v_start.h
Drivers/BSP/GD32E231K_EVAL/: gd32e231k_eval.c  gd32e231k_eval.h  gd32e231k_lcd_eval.c  gd32e231k_lcd_eval.h
Drivers/BSP/GD32E231K_EVAL/LCD_Common/: lcd_font.h  lcd_log.h
Drivers/BSP/GD32E235C_EVAL/: gd32e235c_eval.c  gd32e235c_eval.h  gd32e235c_lcd_eval.c  gd32e235c_lcd_eval.h
Drivers/BSP/GD32E235C_EVAL/LCD_Common/: lcd_log.h
Drivers/BSP/GD32E235F_START/: gd32e235f_start.c  gd32e235f_start.h
Drivers/BSP/GD32E235G_START/: gd32e235g_start.c  gd32e235g_start.h
Drivers/BSP/GD32E235K_START/: gd32e235k_start.c  gd32e235k_start.h
Drivers/BSP/GD32E235V_START/: gd32e235v_start.c  gd32e235v_start.h
Projects/GD32E230C_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E230C_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E230C_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E230C_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32E230C_EVAL/05_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32E230C_EVAL/06_USART_DMA/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230C_EVAL/07_ADC_conversion_triggered_by_timer/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230C_EVAL/08_Comparator_Obtain_Brightness/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230C_EVAL/08_Comparator_Obtain_Brightness/Drivers/BSP/GD32E230C_EVAL/: CMakeLists.txt
Projects/GD32E230C_EVAL/09_I2C_EEPROM/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230C_EVAL/10_SPI_Quad_Flash/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230C_EVAL/11_SPI_TFT_LCD_Driver/Application/: readme.txt
Projects/GD32E230C_EVAL/11_SPI_TFT_LCD_Driver/Drivers/BSP/GD32E230C_EVAL/: CMakeLists.txt
Projects/GD32E230C_EVAL/12_I2S_Audio_Player/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230C_EVAL/13_RCU_Clock_Out/Application/: readme.txt
Projects/GD32E230C_EVAL/14_PMU_sleep_wakeup/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230C_EVAL/15_RTC_Calendar/Application/: readme.txt
Projects/GD32E230C_EVAL/16_IRInfrared_Transceiver/: CMakeLists.txt
Projects/GD32E230C_EVAL/16_IRInfrared_Transceiver/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230C_EVAL/17_TIMER_Breath_LED/Application/: readme.txt
Projects/GD32E230C_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E230C_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E230C_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E230C_START/03_EXTI_Key_Interrupt_mode/Drivers/GD32E23x_standard_peripheral/: CMakeLists.txt
Projects/GD32E230C_START/04_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32E230C_START/04_TIMER_Key_EXTI/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230C_START/04_TIMER_Key_EXTI/Drivers/BSP/GD32E230C_START/: CMakeLists.txt
Projects/GD32E230F_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E230F_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E230F_START/02_GPIO_Key_Polling_mode/cmake/: project.cmake
Projects/GD32E230F_START/03_EXTI_Key_Interrupt_mode/: CMakeLists.txt
Projects/GD32E230F_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E230F_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32E230F_START/: CMakeLists.txt
Projects/GD32E230F_START/04_TIMER_Key_EXTI/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230G_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E230G_START/02_GPIO_Key_Polling_mode/Application/: CMakeLists.txt  readme.txt
Projects/GD32E230G_START/03_EXTI_Key_Interrupt_mode/: CMakeLists.txt
Projects/GD32E230G_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E230G_START/04_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32E230G_START/04_TIMER_Key_EXTI/Drivers/BSP/GD32E230G_START/: CMakeLists.txt
Projects/GD32E230K_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E230K_START/02_GPIO_Key_Polling_mode/Drivers/BSP/GD32E230K_START/: CMakeLists.txt
Projects/GD32E230K_START/04_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32E230V_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32E230V_START/04_TIMER_Key_EXTI/Drivers/BSP/GD32E230V_START/: CMakeLists.txt
Projects/GD32E231K_EVAL/04_USART_Printf/: CMakeLists.txt
Projects/GD32E231K_EVAL/10_SPI_Flash/Drivers/BSP/GD32E231K_EVAL/: CMakeLists.txt
Projects/GD32E235C_EVAL/03_EXTI_Key_Interrupt_mode/: gd32e23x_flash.ld
Projects/GD32E235C_EVAL/09_I2C_EEPROM/: CMakeLists.txt
Projects/GD32E235C_EVAL/11_SPI_TFT_LCD_Driver/: GD32E23x.svd
Projects/GD32E235C_EVAL/12_I2S_Audio_Player/Drivers/BSP/GD32E235C_EVAL/: CMakeLists.txt
Projects/GD32E235C_EVAL/15_RTC_Calendar/Drivers/BSP/GD32E235C_EVAL/: CMakeLists.txt
Projects/GD32E235F_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32E235F_START/02_GPIO_Key_Polling_mode/Drivers/BSP/GD32E235F_START/: CMakeLists.txt
Projects/GD32E235G_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32E235G_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32E235G_START/: CMakeLists.txt
Projects/GD32E235K_START/01_GPIO_Running_LED/: CMakeLists.txt  gd32e23x_flash.ld
Projects/GD32E235K_START/02_GPIO_Key_Polling_mode/Drivers/BSP/GD32E235K_START/: CMakeLists.txt
Projects/GD32E235V_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32E235V_START/: CMakeLists.txt
Projects/GD32E235V_START/04_TIMER_Key_EXTI/: CMakeLists.txt
(+281 files in other folders)
